--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -40,6 +40,9 @@
                 icon: "success"
             });
         });
+
+        window.sr = ScrollReveal();
+        sr.reveal('.row', 50);
     </script>
 
 {% endblock %}
