--- a/src/AppBundle/Resources/views/BuildMail/build.html.twig
+++ b/src/AppBundle/Resources/views/BuildMail/build.html.twig
@@ -31,5 +31,8 @@
             height: 250
         });
     });
+
+    window.sr = ScrollReveal();
+    sr.reveal('.row', 50);
 </script>
 {% endblock %}
