--- a/src/AppBundle/Resources/views/Preview/preview.html.twig
+++ b/src/AppBundle/Resources/views/Preview/preview.html.twig
@@ -47,5 +47,8 @@
 <div class="row">
     <a class="col-md-1 col-md-push-10 next" href="{{ path('build') }}">Build <i class="fa fa-angle-right"></i></a>
 </div>
-
+<script>
+    window.sr = ScrollReveal();
+    sr.reveal('.row', 50);
+</script>
 {% endblock %}
