--- a/src/AppBundle/Resources/views/BuildMail/build.html.twig
+++ b/src/AppBundle/Resources/views/BuildMail/build.html.twig
@@ -9,8 +9,9 @@
     <div class="row">
     <form class="col-md-10 col-md-push-1 form-group" method="post">
         <div class="row form-inline">
-        <input class=" form-control col-md-1 col-md-push-3" type="email" placeholder="From : Example@test.com" name="from">
-        <input class="form-control col-md-1 col-md-push-6" type="text" placeholder="Subject : Hello" name="subject">
+        <input class=" form-control col-md-1 col-md-push-1" type="email" placeholder="From : Example@test.com" name="from">
+        <input class=" form-control col-md-1 col-md-push-3" type="text" placeholder="Alias" name="alias">
+        <input class="form-control col-md-1 col-md-push-5" type="text" placeholder="Subject : Hello" name="subject">
         </div>
         <br/><br/>
         <div class="row">
